--- a/JobboardFront/src/app/navbar/navbar.component.html
+++ b/JobboardFront/src/app/navbar/navbar.component.html
@@ -1,12 +1,18 @@
-<nav class="navbar" >
-  <div class="navbar-logo">
-    <i class="fas fa-briefcase"></i> Jobboard
+<nav class="navbar">
+  <div class="logo">
+    <a routerLink="/">Job<span class="highlight">Board</span></a>
   </div>
-  <ul class="navbar-links">
-    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-    <li><a (click)="scrollToSection('about')" [class.active]="activeLink === 'about'">About</a></li>
-    <li><a (click)="scrollToSection('offers')" [class.active]="activeLink === 'offers'">Job Offers</a></li>
-    <li><a routerLink="/signup" routerLinkActive="active">Sign up</a></li>
-    <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
+
+  <ul class="nav-links">
+    <li><a routerLink="/">Home</a></li>
+    <li><a routerLink="/joboffer">Jobs</a></li>
+    <li><a routerLink="/about">About</a></li>
+    <li><a routerLink="/contact">Contact</a></li>
   </ul>
+
+  <div class="auth-buttons">
+    <a routerLink="/login" class="btn-outline">Login</a>
+    <a routerLink="/signup" class="btn-primary">Sign Up</a>
+  </div>
 </nav>
+
