--- a/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
+++ b/JobboardFront/src/app/pages/offres/offres-list/offres-list.component.html
@@ -50,7 +50,7 @@
 
           <p><i class="fas fa-map-marker-alt"></i> {{ job.location }}</p>
 
-          <button [routerLink]="['/offer', job.id]" class="see">See more</button>
+          <button [routerLink]="['/offers', job.id]" class="see">See more</button>
         </div>
       </div>
 
