--- a/JobboardFront/src/app/navbar/navbar.component.css
+++ b/JobboardFront/src/app/navbar/navbar.component.css
@@ -1,52 +1,72 @@
 .navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0.8rem 4rem;
-  z-index: 10;
-  background-color:#ead6ed;
-  overflow: auto;
+  padding: 16px 48px;
+  min-width: 95%;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.logo-img {
-  width: 32px;
-  height: 32px;
-}
-
-.navbar-logo {
-  display: flex;
-  align-items: center;
-  font-size: 1.8rem;
+.logo a {
+  font-size: 24px;
   font-weight: bold;
-  color: #8C4E97;
-  gap: 10px;
+  color: #134283;
+  text-decoration: none;
 }
 
-.navbar-links {
+.logo .highlight {
+  color: #0065F2;
+}
+
+.nav-links {
   list-style: none;
   display: flex;
-  gap: 2.5rem;
+  gap: 35px;
 }
 
-.navbar-links a {
+.nav-links a {
   text-decoration: none;
-  color: #8C4E97;
-  font-weight: 500;
-  font-size: 1.1rem;
-  padding: 0.5rem 0.8rem;
-  border-radius: 20px;
-  transition: all 0.3s ease;
-  margin-right: 20px;
+  color: #333;
+  font-size: 20px;
+  font-weight: 600;
 }
 
-.navbar-links a:hover,
-.navbar-links a.active {
-  background-color: rgba(255, 255, 255, 0.7);
-  border: 1px solid #CF95D9;
-  color: #74417D;
+.nav-links a:hover {
+  color: #0065F2;
 }
+
+.auth-buttons {
+  display: flex;
+  gap: 12px;
+}
+
+.btn-outline {
+  padding: 8px 16px;
+  border: 2px solid #0065F2;
+  color: #0065F2;
+  border-radius: 25px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: transform 0.3s ease;
+}
+.btn-primary {
+  padding: 8px 16px;
+  border: 2px solid white;
+  color: white;
+  background: #0065F2;
+  border-radius: 25px;
+  text-decoration: none;
+  font-weight: 500;
+  transition: transform 0.3s ease;
+
+}
+
+.btn-outline:hover,
+.btn-primary:hover {
+  transform: translateY(-3px);
+}
+
+
 
