--- a/JobboardFront/src/app/pages/auth/reset/reset.component.html
+++ b/JobboardFront/src/app/pages/auth/reset/reset.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="box">
     <div class="left">
-      <img src="/joboffers.gif" alt="Job Hunt Animation" class="job"/>
+      <img src="/work.gif" alt="Job Hunt Animation" class="job"/>
       <p class="attribution">
         <a href="https://storyset.com/job" target="_blank" rel="noopener noreferrer">
         </a>
